feat: dynamic bigcard and small card

--- a/blog/src/app/pages/home/home.component.html
+++ b/blog/src/app/pages/home/home.component.html
@@ -5,11 +5,15 @@
 <app-menu-title></app-menu-title>
 
 <div class="container__articles">
-    <div class="articles__main"><app-big-card></app-big-card></div>
+    <div class="articles__main">
+        <app-big-card photoCover="#" cardTitle="Kaio não sabe usar mas e mais"
+            cardDescription="O fã mais forte do Yuta!">
+        </app-big-card>
+    </div>
+
     <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card photoCover="https://sm.ign.com/t/ign_br/screenshot/default/blob_bs49.1200.jpg"
+            cardTitle="Segunda Temporada de Jujutsu Kaisen"></app-small-card>
     </div>
 
 </div>
