--- a/blog/src/app/components/big-card/big-card.component.css
+++ b/blog/src/app/components/big-card/big-card.component.css
@@ -1,5 +1,5 @@
 .container__big-card {
-    border: 2px solid white;
+    /*border: 2px solid white;*/
     border-radius: 5px;
     margin-left: 20px;
     margin-right: 20px;
@@ -22,8 +22,7 @@
     margin-top: 10px;
 }
 
-.big-card__description>p>a {
-
+.big-card__description {
     color: grey;
 
 }
