--- a/blog/src/app/components/big-card/big-card.component.html
+++ b/blog/src/app/components/big-card/big-card.component.html
@@ -1,12 +1,10 @@
 <div class="container__big-card">
-    <div class="big-card__photo"> <img src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png" alt="">
+    <div class="big-card__photo"> <img src="{{photoCover}}" alt="">
     </div>
     <div class="big-card__title">
-        <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+        <h1><a href="#">{{cardTitle}}</a></h1>
     </div>
     <div class="big-card__description">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At atque blanditiis assumenda corrupti nostrum
-            recusandae labore nobis quibusdam quaerat obcaecati! Voluptate enim rem ut? Totam enim libero nobis! Nam,
-            quibusdam!</p>
+        <p>{{cardDescription}}</p>
     </div>
 </div>
