--- a/blog/src/app/components/small-card/small-card.component.html
+++ b/blog/src/app/components/small-card/small-card.component.html
@@ -1,10 +1,10 @@
 <div class="container__small-card">
     <div class="container__small-card-content">
         <div class="small-card__photo">
-            <img src="https://sm.ign.com/t/ign_br/screenshot/default/blob_bs49.1200.jpg" alt="">
+            <img src="{{photoCover}}" alt="">
         </div>
         <div class="small-card__title">
-            <h1><a href="#">Segunda temporada de Jujutsu Kaisen</a></h1>
+            <h1><a href="#">{{cardTitle}}</a></h1>
         </div>
     </div>
     <div class="container__small-card-separator">
