--- a/blog/src/app/pages/home/home.component.html
+++ b/blog/src/app/pages/home/home.component.html
@@ -1,18 +1,15 @@
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
-
 <app-menu-title></app-menu-title>
 
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card photoCover="#" cardTitle="Kaio não sabe usar mas e mais"
-            cardDescription="O fã mais forte do Yuta!">
+        <app-big-card Id="1"
+            photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/7F51FA9F6CBD9F0C9B1394B1CC0A6A842D07091318674E234CD33CBF7C28CDC3/scale?width=1200&aspectRatio=1.78&format=jpeg"
+            cardTitle="NOVO HOMEM DE FERRO 3D" cardDescription="Marlven anuncia novo homem de ferro">
         </app-big-card>
     </div>
 
     <div class="articles__others">
-        <app-small-card photoCover="https://sm.ign.com/t/ign_br/screenshot/default/blob_bs49.1200.jpg"
+        <app-small-card Id="2" photoCover="https://sm.ign.com/t/ign_br/screenshot/default/blob_bs49.1200.jpg"
             cardTitle="Segunda Temporada de Jujutsu Kaisen"></app-small-card>
     </div>
 
